# Stock-Bot

./: .txt  README.md  ideas.txt  main.py  pyproject.toml  test.py
