[tool.poetry]
name = "stockbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alpha-vantage = "^2.3.1"
discord = "^1.0.1"
yfinance = "^0.1.55"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
